--- a/lonelyTwitterTests/AndroidManifest.xml
+++ b/lonelyTwitterTests/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <instrumentation
         android:name="android.test.InstrumentationTestRunner"
         android:targetPackage="ca.ualberta.cs.lonelytwitter" />
+    <uses-sdk android:minSdkVersion="8"/>
 
     <application
         android:icon="@drawable/ic_launcher"
